# autotrade

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
autotrade/: __init__.py  __main__.py  utils.py  xAPIConnector.py
tests/: test_env.py  test_polygon.py
